test_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: kubernetes-dashboard
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2021-06-30T00:19:22Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/version: 2.3.0
    helm.sh/chart: kubernetes-dashboard-4.3.1
  name: kubernetes-dashboard2
  namespace: kube-system
  resourceVersion: "749"
  selfLink: /apis/networking.k8s.io/v1/namespaces/kube-system/ingresses/kubernetes-dashboard
  uid: 84447191-df66-42d9-925e-5fcf4b3f3972
spec:
  rules:
  - host: kubernetes-dashboard.192.168.33.20.nip.io
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
